--- a/musicPlay/css/main.css
+++ b/musicPlay/css/main.css
@@ -2,12 +2,11 @@
 .wrapper{
 	width: 416px;
     height: 506px;
-    margin: 200px auto 0;
-    /*position: relative;
+    position: relative;
     top: 50%;
     left: 50%;
-    margin-top: -208px;
-    margin-left: -253px;*/
+    margin-top: -253px;
+    margin-left: -208px;
 	background-color: #eef1f2;
 	border-radius: 10px;
 	box-shadow: 0px 6px 7px #999;
@@ -42,7 +41,7 @@
 	font-weight: 700;
 }
 .wrapper .content .songstyle{
-	font-size: 14px;
+	font-size: 12px;
 	margin-top: 5px;
 }
 .wrapper .content .music-icon{
