--- a/musicPlay/css/reset.css
+++ b/musicPlay/css/reset.css
@@ -18,7 +18,7 @@ a {
 html, body {
     background: #d2d5d6;
     height: 100%;
-    font-family: 微软雅黑, sans-serif;
+    font-family:  Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
 .clearfix {
