--- a/animation+resume/css/main.css
+++ b/animation+resume/css/main.css
@@ -41,6 +41,15 @@ nav{
   width: 32px;
   height: 32px;
 }
+@media (max-width: 1024px){
+	nav{
+		padding: 0 5%;
+	}
+	.siteTopbar .medialist{
+		display: none;
+	}
+}
+
 /**siteSummary**/
 .summary{
 	padding-top: 55px;
@@ -55,16 +64,19 @@ nav{
 	height: 440px;
 }
 .summary .introduction{
-	margin-right: 610px;
+	float: left;
+	width: 410px;
 }
 .summary .introduction h1{
 	font-size: 70px;
 	font-weight: bold;
+	letter-spacing: -0.07em;
 }
 .summary .introduction p{
 	font-size: 26px;
 	margin-top: 15px;
 	margin-bottom: 15px;
+	color: #666;
 }
 .summary .introduction p>small{
 	font-size: 16px;
@@ -74,12 +86,93 @@ nav{
 }
 .summary .photolist>li{
 	float: left;
-	width: 150px;
+	max-width: 150px;
 	height: 85px;
 	padding: 5px;
 	margin-left: 14px;
 	margin-right: 14px;
 	box-shadow: 0px 1px 3px 0px rgba(0,0,0,.4);
+	transform: translateY(0%);
+	transition: all 1s;
+}
+.summary .photolist.hide>li{
+	transform: translateY(200%);
+}
+.summary .photolist>li:nth-child(1){
+	transition-delay: 0.2s; 
+}
+.summary .photolist>li:nth-child(2){
+	transition-delay: 0.4s; 
+}
+.summary .photolist>li:nth-child(3){
+	transition-delay: 0.6s; 
+}
+.summary .photolist>li:nth-child(4){
+	transition-delay: 0.8s; 
+}
+.summary .photolist>li:nth-child(5){
+	transition-delay: 1s; 
+}
+@media (max-width: 668px){
+	.summary{padding: 40px 5%;}
+	.summary .picture{
+		float: none;
+		margin-top: 36px;
+		width: 100%;
+		text-align: center !important;	
+	}
+	.summary .photolist{
+		border-top: 1px solid #ddd;
+		padding-top: 54px; 
+		max-width: 490px;
+		margin: 0 auto;
+	}
+}
+@media (max-width: 1040px) and (min-width: 668px){
+	.summary{padding: 81px 5%;}
+	.summary .aboutme{
+		border: none;
+	}
+	.summary .photolist{
+		border-top: 1px solid #ddd;
+		padding-top: 54px; 
+		max-width: 540px;
+		margin: 0 auto;
+	}
+	.summary .introduction{
+		float: none;
+		width: 100%;
+		margin-right: 0;
+		padding-bottom: 30px;
+	}
+	.summary .picture{
+		float: none;
+		width: 100%;
+		text-align: center !important;	
+	}
+	.summary .photolist{
+		border-top: 1px solid #ddd;
+		padding-top: 54px; 
+		max-width: 540px;
+		margin: 0 auto;
+	}
+	.summary .photolist>li{
+		width: 150px;
+	    padding: 5px;
+	    margin-right: 43px;
+	    margin-bottom: 18px;
+	    margin-left: 0;
+	}
+	.summary .photolist>li:nth-child(3),
+	.summary .photolist>li:nth-child(6){
+		margin-right: 0;
+	}
+}
+@media (max-width: 668px) and (min-width: 376px){
+	.summary .photolist>li{
+		margin-right: 10px;
+		margin-bottom: 18px;
+	}
 }
 /**siteSkill**/
 .siteSkill{
@@ -144,12 +237,12 @@ nav{
 	line-height: 1.5;
 	margin-bottom: 10px;
 }
+/**skillsFigure**/
 .skillsFigure{
 	background: #fafafa;
 	padding-top: 100px; 
 	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,.1);
 	border-bottom: 1px solid #ddd;
-	
 }
 .skillsFigure .figure{
 	position: relative;
@@ -175,6 +268,7 @@ nav{
 	position: absolute;
 	left: 70px;
 	bottom: 0;
+	font-size: 0;
 }
 .skillsFigure .figure .rectangularBar>.bar{
 	display: inline-block;
@@ -183,13 +277,25 @@ nav{
 	width: 166px;
 	border: 1px solid #bbb;
 	text-align: center;
+	font-size: 16px;
+	color: #fff;
 	position: relative;
 }
-.skillsFigure .figure .rectangularBar>.bar>p{
+.skillsFigure .figure .rectangularBar>.bar>.precent{
 	position: absolute;
-	bottom: 20%;
-	left: 50%;
-	text-align: center;
+	width: 100%;
+	bottom: 50px;
+	font-size: 60px;
+	opacity: 0.3;
+}
+.skillsFigure .figure .rectangularBar>.bar>.precent>small{
+	font-size: 24px;
+	padding-left: 3px;
+}
+.skillsFigure .figure .rectangularBar>.bar>.know{
+	position: absolute;
+	width: 100%;
+	bottom: 20px;	
 }
 .skillsFigure .figure .rectangularBar>.bar:nth-child(1){
 	height: 420px;
@@ -220,11 +326,12 @@ nav{
     background-color: #da6d6c;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ca4544), color-stop(1, #da6d6c));
 }
+/**siteFeature**/
 .siteFeature{
 	padding-top: 100px;
 	padding-bottom: 100px;
 	border-bottom: 1px solid #ddd;
-	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: inset 0px 30px 30px -30px rgba(0,0,0,.05);
 }
 .siteFeature .major{
 	float: right;
@@ -247,9 +354,102 @@ nav{
 	line-height: 30px;
 	margin-bottom: 20px;
 }
+/**footer**/
+footer{
+	background: #f5f5f5;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,.1);
+	position: relative;
+}
 footer .button{
-	width: 80px;
-	height: 80px;
-	border-radius: 50% 50%;
-	background: #ddd;
+	position: absolute;
+    width: 100%;
+    height: 50px;
+    top: -50px;
+    left: 0px;
+}
+footer #gotop{
+    background: url(http://www.adhamdannaway.com/wp-content/themes/ad/images/sprite.png) 0 -217px no-repeat;
+    width: 118px;
+    height: 90px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    margin-left: -59px;
+    transition: all 0.3s;
+}
+footer #gotop:hover{
+	transform: translateY(-5px);
+}
+footer .button>a{
+	color: #fff;
+}
+footer a{
+	color: #666;
+}
+footer a:hover{
+	color: #333;
+}
+footer .menu{
+	display: inline-block;
+	text-align: center;
+	margin-left: 120px;
+	margin-right: 80px;
+	font-size: 16px;
+    z-index: 2;
+    position: relative;
+}
+footer .menu>a{
+	padding-left: 8px;
+	padding-right: 8px;
+}
+footer .mediaLinks{
+	display: inline-block;
+	font-size: 12px;	
+}
+footer .mediaLinks #zan{
+	display: inline-block;
+	padding: 3px 4px;
+	color: #fff;
+	background: linear-gradient(#4c69ba, #3b55a0);
+	border-radius: 2px;
+}
+footer .mediaLinks .iconfont{
+	background: #fff;
+	color: #354c8c;
+	font-size: 12px;
+	margin-right: 6px;
+}
+footer .mediaLinks .ret:after{
+	width: 4px;
+    height: 4px;
+    border: 1px solid transparent;
+    border-top-color: #bbb;
+    border-right-color: #bbb;
+    background-color: #fff;
+    transform: rotate(225deg);
+    position: absolute;
+    content: '';
+    top: 7px;
+    left: -3px;
+}
+footer .mediaLinks .ret{
+	display: inline-block;
+	padding: 2px 4px;
+	border: 1px solid #bbb;
+	background: #fff;
+	position: relative;
+	margin-left: 4px;
+	font-size: 'Helvetica Neue',Arial,sans-serif;
+}
+footer .mediaLinks #social{
+	color: #fff;
+	padding: 4px;
+	margin-left: 6px;
+	border-radius: 2px;
+	background: #1b95e0;
+}
+footer .mediaLinks #social span{
+	padding-left: 4px;
 }
