--- a/musicPlay/css/main.css
+++ b/musicPlay/css/main.css
@@ -10,11 +10,11 @@
 	background-color: #eef1f2;
 	border-radius: 10px;
 	box-shadow: 0px 6px 7px #999;
+	overflow: hidden;
 }
 .wrapper .background{
 	width: 100%;
     height: 268px;
-	border-radius: 15px 15px 0 0;
 	overflow: hidden;
 }
 .wrapper .background img{
