--- a/CSS3 menu/index.css
+++ b/CSS3 menu/index.css
@@ -1,4 +1,9 @@
 *{margin: 0; padding: 0}
+body,html{
+	font-family: "Microsoft YaHei",Arial,Helvetica,sans-serif;
+	color: #000;
+	font-size: 12px;
+}
 ul{list-style: none;}
 a{text-decoration: none;}
 .clearfix:after{
@@ -6,67 +11,112 @@ a{text-decoration: none;}
 	display: block;
 	clear: both;
 }
+h1{
+	font-weight: normal;
+	font-size: 18px;
+}
+p{
+	font-size: 12px;
+	margin-top: 3px;
+	color: #6d757a;
+}
+.lf{
+	float: left;
+	width: 120px;
+	cursor: pointer;
+}
+.desp{
+	float: left;
+	width: 40px;
+	height: 30px;
+	padding: 20px 0 25px 0;
+}
 .wrapper{
 	width: 980px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
+	height: 80px;
 	border: 1px solid #f1f1f1;
 	border-radius: 3px;
 	box-shadow: 0 0 1px #f1f1f1;
 }
-.content{
-	padding: 0 20px;
-	height: 80px;
-	position: relative;
-	display: inline-block;
-}
-.desp{
-	text-align: right;
-    position: absolute;
-    top: 0;
-    padding: 20px;
-    left: 135px;
-
-}
 .share{
+	padding-left: 10px;
+}
+.conment{
+	display: block;
 	float: left;
 	width: 80px;
 	height: 80px;
 }
-.share .bg{
-	width: 80px;
-	height: 80px;
-	display: block;
-	background: url(images/anim-share.png) 0px 0px no-repeat;
-	animation: share steps(17) 0.8s infinite both;
+/*--share--*/
+.share .share-bg{
+	background: url(images/anim-share.png) 0 0 no-repeat;
 }
 @keyframes share{
-	0%{
-		background-position: 0%;
+	0% {
+		background-position: 0 0;
 	}
-	100%{
-		background-position: 100%;
+	100% {
+		background-position: -1360px 0;
 	}
 }
-.collect .bg{
-	width: 80px;
-	height: 80px;
-	display: block;
-	background: url(images/anim-fav.png) 0px 0px no-repeat;
-	animation: share steps(17) 0.8s infinite both;
+.share:hover .share-bg{
+	animation: share steps(17) 0.8s infinite;
 }
-.iPhone .bg{
-	width: 80px;
-	height: 80px;
-	display: block;
-	background: url(images/anim-app.png) 0px 0px no-repeat;
-	animation: share steps(17) 0.8s infinite both;
+/*--collect--*/
+.collect{
+	padding-left: 20px;
 }
-.icon .bg{
-	width: 80px;
-	height: 80px;
-	display: block;
-	background: url(images/anim-coin.png) 0px 0px no-repeat;
-	animation: share steps(17) 0.8s infinite both;
+.collect-bg{
+	background: url(images/anim-fav.png) 0 5px no-repeat;
 }
+
+@keyframes collect{
+	0% {
+		background-position: 0 5px;
+	}
+	100% {
+		background-position: -1120px 5px;
+	}
+}
+.collect:hover .collect-bg{
+	animation: collect steps(14) 1s infinite both;
+}
+/*--iPhone--*/
+.iPhone{
+	padding-left: 20px;
+}
+.iPhone-bg{
+	background: url(images/anim-app.png) 0 0 no-repeat;
+}
+.iPhone:hover .iPhone-bg{
+	animation: iPhone steps(16) 1.2s 1;
+}
+@keyframes iPhone{
+	0% {
+		background-position: 0 0;
+	}
+	100% {
+		background-position: -1280px 0;
+	}
+} 
+/*--coin--*/
+.coin{
+	padding-left: 20px;
+}
+.coin-bg{
+	background: url(images/anim-coin.png) 0 -15px no-repeat;
+}
+.coin:hover .coin-bg{
+	animation: coin steps(8) 0.8s infinite;
+}
+@keyframes coin{
+	0% {
+		background-position: 0 -15px;
+	}
+	100% {
+		background-position: -640px 0px;
+	}
+} 
